schema/testdata/validation_expressions_compare_model_operand_base_diff_types/schema.keel

model BankAccount {
    fields {
        identity Identity @unique @relation(mainAccount)
    }
    actions {
        get getBankAccount(id) {
            @where(bankAccount not in ctx.identity.mainAccount)
        }
    }
}