schema/testdata/errors/unique_lookup_model.keel
model BankAccount {
    fields {
        identity Identity {
            @unique
            @relation(account)
        }
    }

    actions {
        //expect-error:13:27:ActionInputError:The action 'getBankAccount' can only get a single record and therefore must be filtered by unique fields
        get getBankAccount() {
            @where(bankAccount != ctx.identity.account)
        }
    }
}
